--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LibraryManagementSystem">
         <activity
-            android:name=".Main2Activity"
+            android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.LibraryManagementSystem.NoActionBar">
             <intent-filter>
