Dodane sve aktivnosti koje ce se otvarati kada se pritisne neki item u listView-u.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LibraryManagementSystem">
+        <activity android:name=".ItemClickActivity.ItemClickedOperativniSustaviActivity"></activity>
+        <activity android:name=".ItemClickActivity.ItemClickedMrezeIProtokoliActivity" />
+        <activity android:name=".ItemClickActivity.ItemClickedHardverActivity" />
         <activity
             android:name=".draweraktivnosti.FABActivity"
             android:label="Ovdje možete napisati upit!"
