--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LibraryManagementSystem">
+        <activity android:name=".ProgramiranjeMenuActivity.WishListActivity"></activity>
+        <activity android:name=".ProgramiranjeMenuActivity.PosudeneKnjigeActivity" />
         <activity
             android:name=".SearchActivity.SearchHardverActivity"
-            android:parentActivityName=".draweraktivnosti.HardverActivity"/>
+            android:parentActivityName=".draweraktivnosti.HardverActivity" />
         <activity
             android:name=".SearchActivity.SearchOperativniSustaviActivity"
-            android:parentActivityName=".draweraktivnosti.OperativniSustaviActivity"/>
+            android:parentActivityName=".draweraktivnosti.OperativniSustaviActivity" />
         <activity
             android:name=".SearchActivity.SearchMrezeIProtokoliActivity"
-            android:parentActivityName=".draweraktivnosti.MrezeIProtokoliActivity"/>
+            android:parentActivityName=".draweraktivnosti.MrezeIProtokoliActivity" />
         <activity
             android:name=".SearchActivity.SearchProgramiranjeActivity"
             android:parentActivityName=".draweraktivnosti.ProgramiranjeActivity" />
