--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,24 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LibraryManagementSystem">
-        <activity android:name=".OperativniSustaviMenuActivity.WishListOperativniSustaviActivity"></activity>
-        <activity android:name=".OperativniSustaviMenuActivity.PosudeneKnjigeOperativniSustaviActivity" />
-        <activity android:name=".MrezeIProtokoliMenuActivity.WishListMrezeIProtokoliActivity" />
-        <activity android:name=".MrezeIProtokoliMenuActivity.PosudeneKnjigeMrezeIProtokoliActivity" />
-        <activity android:name=".HardverMenuActivity.WishListHardverActivity" />
-        <activity android:name=".HardverMenuActivity.PosudeneKnjigeHardverActivity" />
+        <activity
+            android:name=".OperativniSustaviMenuActivity.WishListOperativniSustaviActivity"
+            android:parentActivityName=".draweraktivnosti.OperativniSustaviActivity"/>
+        <activity
+            android:name=".OperativniSustaviMenuActivity.PosudeneKnjigeOperativniSustaviActivity"
+            android:parentActivityName=".draweraktivnosti.OperativniSustaviActivity"/>
+        <activity
+            android:name=".MrezeIProtokoliMenuActivity.WishListMrezeIProtokoliActivity"
+            android:parentActivityName=".draweraktivnosti.MrezeIProtokoliActivity"/>
+        <activity
+            android:name=".MrezeIProtokoliMenuActivity.PosudeneKnjigeMrezeIProtokoliActivity"
+            android:parentActivityName=".draweraktivnosti.MrezeIProtokoliActivity"/>
+        <activity
+            android:name=".HardverMenuActivity.WishListHardverActivity"
+            android:parentActivityName=".draweraktivnosti.HardverActivity"/>
+        <activity
+            android:name=".HardverMenuActivity.PosudeneKnjigeHardverActivity"
+            android:parentActivityName=".draweraktivnosti.HardverActivity"/>
         <activity
             android:name=".ProgramiranjeMenuActivity.WishListProgramiranjeActivity"
             android:parentActivityName=".draweraktivnosti.ProgramiranjeActivity" />
