--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -103,7 +103,7 @@
         <activity
             android:name=".UnesiKnjiguActivity.UnesiteKnjiguProgramiranjeActivity"
             android:label="Programiranje"
-            android:parentActivityName=".draweraktivnosti.ProgramiranjeActivity" />
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
